new campaign new me

--- a/src/assets/styles/_base.css
+++ b/src/assets/styles/_base.css
@@ -9,7 +9,7 @@
 /*-------------------------------------*/
 :root {
 	/* Primary Colors */
-	--primary-color: #7dbbbb;
+	--primary-color: #c9c7c5;
 	--secondary-color: #161c1dcc;
 	--highlight-hover: rgba(255, 255, 255, 0.3);
 	--highlight-active: rgba(255, 255, 255, 0.1);
@@ -23,10 +23,10 @@
 	--text-mission-status: rgba(255, 255, 255, 0.87);
 	--mission-start: rgba(109, 109, 109, 1);
 	--mission-partial: rgba(88, 34, 102, 1);
-	--mission-success: #226662;
+	--mission-success: #c9c7c5;
 	--mission-failure: rgba(176, 45, 45, 1);
-	--primary-logo: #0C3C40;
-	--secondary-logo: #146464;
+	--primary-logo: #c6cccc;
+	--secondary-logo: #636363;
 	/* Pilot Roster Text */
 	--text-pilot-header: rgba(255, 255, 255, 0.67);
 	--text-pilot-value: rgba(255, 255, 255, 0.87);
